# GaussOS

./: .dockerignore  .env.example  .gitignore  AGENT_MEMORY.md  ARCHITECTURE.md  BENCHMARK.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  FRONTEND.md  INTEGRATION.md  PROGRESS.md  README.md  RESEARCH.md  ROADMAP.md  SCENARIOS.md  SERVICE_SCRIPTS.md  SPECS.md  TODO.md  TUTORIAL.md  WEB-SCRIPTS.md  build.rs  create_cargo_toml.sh  docker-compose.yml
benches/: engine_bench.rs  memory_benchmark.rs  simple_benchmarks.rs
bindings/: README.md
bindings/gausstwin-py/: Cargo.toml  build.rs
bindings/gausstwin-py/examples/: basic_simulation.py  flocking_simulation.py  spatial_query.py
bindings/gausstwin-py/src/: lib.rs
bindings/gausstwin-ts/: Cargo.toml  build.rs  index.d.ts  mod.ts
bindings/gausstwin-ts/examples/: basic_simulation.ts  flocking_simulation.ts  spatial_query.ts
bindings/gausstwin-ts/src/: lib.rs
crates/gausstwin-agent/: Cargo.toml
crates/gausstwin-agent/src/: architectures.rs  cognitive.rs  lib.rs  reactive.rs
crates/gausstwin-agent/src/models/: ecological.rs  economic.rs  mod.rs  social.rs  urban.rs
crates/gausstwin-agent/src/models/digital_twin/: commissioning.rs  maintenance.rs  mod.rs  optimization.rs  physics.rs
crates/gausstwin-agent/src/models/financial/: banking.rs  insurance.rs  markets.rs  mod.rs  regulation.rs  risk.rs
crates/gausstwin-agent/src/models/logistics/: mod.rs
crates/gausstwin-agent/src/models/manufacturing/: mod.rs
crates/gausstwin-agent/src/models/supply_chain/: mod.rs
crates/gausstwin-agent/src/models/sustainability/: carbon.rs  circular.rs  energy.rs  error.rs  mod.rs  waste.rs
crates/gausstwin-cosim/: Cargo.toml
crates/gausstwin-cosim/benches/: cosim_benchmarks.rs
crates/gausstwin-cosim/src/: lib.rs
crates/gausstwin-cosim/src/common/: data.rs  mod.rs  sync.rs  time.rs
crates/gausstwin-cosim/src/fmi/: mod.rs
crates/gausstwin-cosim/src/hla/: ddm.rs  mod.rs  object.rs
crates/gausstwin-data/: Cargo.toml
crates/gausstwin-data/benches/: benchmarks.rs
crates/gausstwin-data/src/: cache.rs  config.rs  error.rs  lib.rs  metrics.rs  pool.rs  store.rs  types.rs
crates/gausstwin-data/tests/: integration_test.rs
crates/gausstwin-db/: Cargo.toml
crates/gausstwin-db/src/: lib.rs
crates/gausstwin-des/: Cargo.toml
crates/gausstwin-des/benches/: event_processing.rs
crates/gausstwin-des/src/: lib.rs
crates/gausstwin-fsm/: Cargo.toml
crates/gausstwin-fsm/src/: dynamics.rs  hierarchical.rs  lib.rs  optimization.rs
crates/gausstwin-integration/: Cargo.toml
crates/gausstwin-integration/src/: lib.rs  metrics.rs
crates/gausstwin-integration/src/agent/: mod.rs
crates/gausstwin-integration/src/analytics/: mod.rs
crates/gausstwin-integration/src/blockchain/: ethereum.rs  mod.rs
crates/gausstwin-integration/src/cloud/: alibaba.rs  aws.rs  azure.rs  gcp.rs  ibm.rs  mod.rs  oracle.rs
crates/gausstwin-integration/src/common/: mod.rs
crates/gausstwin-integration/src/connectors/: kafka.rs  mod.rs  modbus.rs  mongodb.rs  mqtt.rs  opcua.rs  postgresql.rs  rabbitmq.rs
crates/gausstwin-integration/src/connectors/iot/: mod.rs
crates/gausstwin-integration/src/distributed/: mod.rs
crates/gausstwin-integration/src/industrial/: bacnet.rs  mod.rs  s7.rs
crates/gausstwin-integration/src/io/: mod.rs
crates/gausstwin-integration/src/neural/: mod.rs
crates/gausstwin-integration/src/optimization/: mod.rs
crates/gausstwin-integration/src/quantum/: mod.rs
crates/gausstwin-integration/src/spatial/: mod.rs
crates/gausstwin-spaces/: Cargo.toml
crates/gausstwin-spaces/benches/: benchmarks.rs  pathfinding_benchmarks.rs  space_benchmarks.rs
crates/gausstwin-spaces/src/: common.rs  continuous.rs  error.rs  graph.rs  grid.rs  lib.rs  memory.rs  metrics.rs  spatial_index.rs  visualization.rs  viz.rs
crates/gausstwin-spaces/src/memory/: mod.rs  pool.rs
crates/gausstwin-spaces/src/pathfinding/: algorithms.rs  cache.rs  enhanced.rs  error.rs  mod.rs  simd.rs  traits.rs
crates/gausstwin-spaces/src/pathfinding/algorithms/: astar.rs  enhanced_astar.rs
crates/gausstwin-spaces/src/pathfinding/algorithms/enhanced/: astar.rs  mod.rs  rrt.rs  simd.rs
crates/gausstwin-spaces/src/spatial/: grid.rs  mod.rs
crates/gausstwin-visual/: Cargo.toml
crates/gausstwin-visual/src/: analytics.rs  dashboard.rs  error.rs  lib.rs  scenarios.rs  server.rs
deploy/: grafana-dashboard.json  prometheus.yml
examples/: advanced_workflow.rs  agent_memory_showcase.rs  simple_demo.rs
gausstwin-cli/: Cargo.toml
logs/: build_report.md  frontend_analysis.txt
schemas/: postgresql_schema.sql  surrealdb_schema.surql
scripts/: README.md  bench.sh  compile.sh  database.sh  gaussos-unified.sh  gaussos.sh  manage.sh  monitor.sh  start.sh  test-integration.sh  test.sh
sdk/: README.md
src/: cli.rs  config.rs  core.rs  error.rs  lib.rs  lifecycle.rs  monitoring.rs  observability.rs  scheduler.rs  server.rs  system.rs
tests/: advanced_memory_tests.rs  comprehensive_integration_tests.rs  database_integration_tests.rs  frontend_backend_integration_tests.rs  integration_tests.rs  memory_intelligence_tests.rs  performance_tests.rs  unit_tests.rs
ui/desktop/src-tauri/: Cargo.toml  tauri.conf.json
ui/desktop/src-tauri/capabilities/: default.json
ui/desktop/src-tauri/icons/: icon.icns
ui/desktop/src-tauri/src/: lib.rs  main.rs
ui/desktop/src-tauri/src/commands/: auth.rs  file.rs  mod.rs  settings.rs  simulation.rs  system.rs
ui/desktop/src-tauri/src/db/: mod.rs
ui/desktop/src-tauri/src/state/: mod.rs
ui/desktop/src-tauri/src/utils/: mod.rs
ui/tui/: Cargo.toml  README.md
ui/tui/src/: main.rs
ui/tui/src/api/: mod.rs
ui/tui/src/app/: actions.rs  config.rs  mod.rs  state.rs
ui/tui/src/handlers/: mod.rs
ui/tui/src/ui/: agents.rs  command_palette.rs  common.rs  dashboard.rs  help.rs  logs.rs  metrics.rs  mod.rs  settings.rs  simulations.rs  spaces.rs
ui/tui/src/utils/: mod.rs
ui/tui/src/views/: mod.rs
ui/tui/src/widgets/: mod.rs
web-ui/: .gitignore  README.md  api-client.ts  deno.json  main.ts  monitor.sh  start.sh  (+4 more)
(+234 files in other folders)
