[package]
name = "gausstwin-ts"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = "TypeScript/JavaScript bindings for GaussTwin"
authors = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

[dependencies]
gausstwin-core = { path = "../../crates/gausstwin-core" }
gausstwin-ai = { path = "../../crates/gausstwin-ai" }
gausstwin-agent = { path = "../../crates/gausstwin-agent" }
gausstwin-spaces = { path = "../../crates/gausstwin-spaces" }

# WASM and Deno support
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
deno_core = { workspace = true }
gloo-utils = { workspace = true }
tsify = { workspace = true }
wee_alloc = { workspace = true }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tch = "0.15.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["web"]
web = []
node = []
deno = []
wee_alloc = []

