[package]
name = "gausstwin-fsm"
version = "0.1.0"
edition = "2021"
description = "State-flow and system dynamics simulation kernel for GaussTwin"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime & utilities
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Concurrency & synchronization
parking_lot = "0.12"
dashmap = "5.5"
crossbeam = "0.8"

# Linear algebra & numerical methods
nalgebra = "0.32"
num = "0.4"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & metrics
tracing = "0.1"
metrics = "0.21"
opentelemetry = { version = "0.20", features = ["metrics"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing & benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"
mockall = "0.12"
test-log = "0.2"
env_logger = "0.10"

[dev-dependencies]
proptest = "1.3"
quickcheck = "1.0"
rstest = "0.18"

[features]
default = ["metrics"]
metrics = []

[[bench]]
name = "fsm_benchmarks"
harness = false

