[package]
name = "gausstwin-desktop"
version = "0.1.0"
description = "GaussTwin Desktop Application - High-Performance Digital Twin Framework"
authors = ["GaussTwin Team"]
license = "MIT"
repository = "https://github.com/gausstwin/gausstwin"
edition = "2021"
rust-version = "1.70"

[lib]
name = "gausstwin_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0", features = [
    "tray-icon",
    "image-png",
    "image-ico",
] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-window-state = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-http = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }

# Security
keyring = "2"
argon2 = "0.5"
chacha20poly1305 = "0.10"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
once_cell = "1.19"

# File watching
notify = "6"

# System info
sysinfo = "0.30"

# Blake3 hashing
blake3 = "1.5"

# Open URLs
open = "5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_Shell"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
